# Codewars

./: CMakeLists.txt  README.md
src/: beeramid.cpp
